@@ -41,7 +41,8 @@ __all__ = [ 'CONFIG', 'SB_INFO', 'VERSION', 'PROG_NAME', 'ID_NEW', 'ID_OPEN',
             'I18N_PAGE', 'ID_GOTO_MBRACE', 'ID_HLCARET_LINE', 'ID_SHOW_SB',
             'ID_REVERT_FILE', 'ID_RELOAD_ENC', 'ID_DOCPROP', 'ID_PASTE_AFTER',
             'ID_COLUMN_MODE', 'ID_PANELIST', 'ID_MAXIMIZE_EDITOR', 
-            'ID_NEW_WINDOW', 'ID_TOGGLE_FOLD', 'ID_TOGGLE_ALL_FOLDS']
+            'ID_NEW_WINDOW', 'ID_TOGGLE_FOLD', 'ID_TOGGLE_ALL_FOLDS',
+            'ID_SAVE_SESSION', 'ID_LOAD_SESSION']
 
 #---- Project Info ----#
 # The project info was moved to another module so it could be accessed
@@ -97,6 +98,8 @@ ID_REVERT_FILE   = wx.ID_REVERT_TO_SAVED
 ID_RELOAD_ENC    = wx.NewId()
 ID_SAVE_PROFILE  = wx.NewId()
 ID_LOAD_PROFILE  = wx.NewId()
+ID_SAVE_SESSION  = wx.NewId()
+ID_LOAD_SESSION  = wx.NewId()
 ID_PRINT         = wx.ID_PRINT
 ID_PRINT_PRE     = wx.ID_PREVIEW
 ID_PRINT_SU      = wx.NewId()
